feat(article-notification): user can recieve a notification
